--- a/src/style/reset.css
+++ b/src/style/reset.css
@@ -4,4 +4,5 @@
     box-sizing: border-box;
     outline: none;    
     font-family: "Roboto", sans-serif;
+     -webkit-tap-highlight-color: transparent;
 }
